# flexiv_aidk

./: CMakeLists.txt  Doxyfile  README.md  release_notes.md
cmake/: FlexivInstallLibrary.cmake
config/: GRASPNET.json  GRASPNET_IMAGE.json  TUTORIAL.json
example/: CMakeLists.txt  test_aidk_compute.cpp  test_aidk_compute_image.cpp  test_aidk_others.cpp
example_py/: test_aidk_compute.py  test_aidk_compute_image.py  test_aidk_others.py  test_grasping_with_rdk.py
include/: aidk.hpp  variant.hpp
include/flexiv/ai/: aidk.hpp  defs.hpp  variant.hpp
